--- a/css/style.css
+++ b/css/style.css
@@ -76,16 +76,36 @@ meter {
 }
 
 body {
-    font-family: shancez, sans-serif;
+    font-family: 'shancez', sans-serif;
     font-size: 14px;
 }
 
 li {
     list-style: none;
+    float: left;
+}
+
+.logo span {
+    color: red;
+}
+
+.logo {
+    font-size: 75px;
+    float: left;
+    margin-top: 38px;
+    margin-left: 90px;
+    border: 1px solid black;
+    font-family: 'Sanchez';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 75px;
+    line-height: 96px;
+    color: #000000;
+    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
 .header {
-    width: 100%;
+    width: 1440px;
     margin: 0 auto;
     height: 180px;
     position: relative;
@@ -94,21 +114,15 @@ li {
     background-color: rgba(155, 255, 171, 1);
 }
 
-.logo h1 {
-    position: relative;
-    padding-left: 90px;
-    padding-top: 38px;
-    padding-bottom: 37px;
-    font-size: 75px;
+.list li {
+    margin-top: 68px;
+    margin-left: 50px;
+    margin-bottom: 65px;
+    border: 1px solid black;
+    font-family: 'Sanchez';
     font-style: normal;
     font-weight: 400;
-    line-height: 96px;
-    font-family: 'Sanchez', serif;
+    font-size: 20px;
+    line-height: 46px;
     color: #000000;
-    text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-}
-
-
-span {
-    color: red;
 }
