--- a/css/style.css
+++ b/css/style.css
@@ -159,6 +159,15 @@ form {
 }
 
 .cover {
-    width: 100%;
+    width: 1440px;
     height: 600px;
+}
+
+.cover-img {
+    width: 1440px;
+    height: 600px;
+    background-size: cover;
+    margin: 0 auto;
+    right: 0;
+
 }
