--- a/css/style.css
+++ b/css/style.css
@@ -159,15 +159,31 @@ form {
 }
 
 .cover {
-    width: 1440px;
+    width: 100%;
     height: 600px;
 }
 
 .cover-img {
-    width: 1440px;
+    width: 100%;
     height: 600px;
     background-size: cover;
     margin: 0 auto;
     right: 0;
+    position: relative;
+}
 
+.cover-container {
+    top:0;
+    border: 1px solid black;
+}
+
+.atas {
+    font-family: 'Russo One', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 100px;
+    line-height: 120px;
+    text-align: center;
+    color: black;
+    border: 1px solid black;
 }
