--- a/css/style.css
+++ b/css/style.css
@@ -158,18 +158,17 @@ form {
     
 }
 
-.cover {
+.cover { 
     width: 100%;
-    height: 600px;
+    height: auto;
 }
 
 .cover-img {
     width: 100%;
-    height: 600px;
+    height: auto;
     background-size: cover;
     margin: 0 auto;
-    right: 0;
-    position: relative;
+    position: absolute;
 }
 
 .cover-container {
@@ -183,7 +182,14 @@ form {
     font-weight: 400;
     font-size: 100px;
     line-height: 120px;
-    text-align: center;
     color: black;
     border: 1px solid black;
+}
+
+.atas {
+    text-align: center;
+    position: relative;
+    margin-top: 0px;
+    margin-bottom: 0px;
+    z-index: 1;
 }
